--- a/conf/server.conf
+++ b/conf/server.conf
@@ -5,4 +5,6 @@ server.thread_pool: 10
 engine.autoreload.on: True
 log.error_file: "./logs/error.log"
 log.access_file: "./logs/access.log"
-cors.expose.on: True
+cors.expose.on: True,
+
+
