--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^5.7.1",
+    "@mantine/hooks": "^5.7.1",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@tabler/icons": "^1.110.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,22 +17,16 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^5.7.1",
-    "@mantine/hooks": "^5.7.1",
-    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "react": "^18.2.0",
     "react-d3-tree": "^3.3.5",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "@tabler/icons": "^1.110.0"
+    "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
+    "typescript": "^4.9.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
